fix alignment of button on messages

--- a/packages/angular/src/variables.scss
+++ b/packages/angular/src/variables.scss
@@ -44,7 +44,6 @@ $list-padding-left: $material-list-item-horizontal-padding;
 
 @mixin message-title {
   display: flex;
-  align-items: center;
   flex-direction: row;
   justify-content: space-between;
   font-size: 12px;
