--- a/packages/vue/src/variables.scss
+++ b/packages/vue/src/variables.scss
@@ -55,7 +55,6 @@ $main-container-padding-right: 16px;
 
 @mixin message-title {
   display: flex;
-  align-items: center;
   flex-direction: row;
   justify-content: space-between;
   font-size: 12px;
